parse/parse.c
#include "../ppp.h"
#include "../defs.h"
#include "parse.h"
#include "list.h"
#include "ilist.h"
#include "symbol_table.h"
#include "interface.h"
#include <assert.h>
#include <ctype.h>
#include <fcntl.h>
#include <math.h>
#include <stdio.h>
#include <stdlib.h>
#include <time.h>
#include <string.h>
#include <sys/mman.h>
#include <unistd.h>

#define DUMP_BUFFER_SIZE 8096
static char dump_buffer[DUMP_BUFFER_SIZE];

#define DUMP_CALL(function, ...)  \
    num_written += function(buffer + num_written, buf_size - num_written, __VA_ARGS__)

symbol_table_t* node_symbol_table(void* any)
{
    return ((struct CommonNode*)any)->symbol_table;
}

void* new_node(size_t size, ParserState* ps)
{
    struct CommonNode* node;
    node = malloc(size);
    node->symbol_table = ps->symbol_table;
    return node;
}


/******************************************************************************
Below is the parser
******************************************************************************/

/* #define debug(fmt, arg) fprintf(stderr, fmt, arg) */
#define debug(fmt, arg) do{}while(0) 

int peek1(struct ParserState* ps, int offset)
{
    if (ps->pointer + offset >= ps->program_length) return -1;
    return ps->program[ps->pointer + offset];
}

int peek(struct ParserState* ps)
{
    return peek1(ps, 0);
}

static int isnewline(int c)
{
    return c == '\n' || c == '\r';
}

void skip_spaces(struct ParserState* ps)
{
    while (1) {
        while (isspace(peek(ps))) {
            ps->pointer++;
        }

        /* skip comments: */
        if (peek(ps) == '/' && peek1(ps, 1) == '/') {
            ps->pointer += 2;
            while (peek(ps) > 0 && !isnewline(peek(ps))) {
                ps->pointer++;
            }
        } else if (peek(ps) == '/' && peek1(ps, 1) == '*') {
            ps->pointer += 2;
            while (peek(ps) > 0 && peek1(ps, 1) > 0 && !(peek(ps) == '*' && peek1(ps, 1) == '/')) {
                ps->pointer++;
            }
        } else break;
    }
}

int accept(struct ParserState* ps, const char* token)
{
    int token_length;
    int i;

    skip_spaces(ps);

    token_length = strlen(token);

    if (ps->pointer + token_length > ps->program_length)
        return 0;

    for (i = 0; i < token_length; i++)
        if (token[i] != ps->program[ps->pointer + i])
            return 0;

    ps->pointer += token_length;
    return 1;}


static void* failure(const char* message)
{
    debug("%s\n", message);
    return 0;
}

const char* symbol_to_string(struct symbol_table_t* symbol_table, symbol_t symbol)
{
    struct symbol_table_entry_t* table_entry;
    table_entry = symbol_table_find_entry_by_symbol(symbol_table, symbol);
    if (table_entry)
        return table_entry->string;
    else
        return 0;
}

const char* dump_name(symbol_t name, struct symbol_table_t* symbol_table) {
	dump_name_impl(dump_buffer, DUMP_BUFFER_SIZE, name, symbol_table);
	return dump_buffer;
}

int dump_name_impl(char* buffer, int buf_size, symbol_t name, struct symbol_table_t* symbol_table)
{   
    return snprintf(buffer, buf_size, "%s", symbol_to_string(symbol_table, name));
}

static int is_name_first_character(int c)
{
    return isalpha(c) || c == '_';
}

static int is_name_character(int c)
{
    return isalnum(c) || c == '_';
}

symbol_t parse_name(struct ParserState* ps)
{
    int length;
    char characters[MAX_NAME_SIZE];

    skip_spaces(ps);
    if (!is_name_first_character(peek(ps))) return 0;

    length = 0;
    while (is_name_character(peek(ps))) {
        characters[length++] = peek(ps);
        ps->pointer++;
    }
    characters[length] = '\0';

    return symbol_table_lookup_symbol(ps->symbol_table, characters);
}

const char* dump_models(struct ModelsNode* models) {
	dump_models_impl(dump_buffer, DUMP_BUFFER_SIZE, models);
	return dump_buffer;
}

int dump_models_impl(char* buffer, int buf_size, struct ModelsNode* models)
{
    int num_written = 0;
    DUMP_CALL(dump_model_impl, models->model);
    if (models->models)
        DUMP_CALL(dump_models_impl, models->models);
    return num_written;
}

ModelsNode* parse_models(ParserState* ps)
{
    struct ModelsNode* models;
    struct ModelNode* model;
    struct ModelsNode* models1;

    model = parse_model(ps);
    if (!model) return failure("parse_models: model expected");
    models1 = parse_models(ps);

    models = new_node(sizeof(struct ModelsNode), ps);
    models->model = model;
    models->models = models1;

    return models;
}

const char* dump_model(struct ModelNode* model) {
	dump_model_impl(dump_buffer, DUMP_BUFFER_SIZE, model);
	return dump_buffer;
}

int dump_model_impl(char* buffer, int buf_size, struct ModelNode* model)
{
    int num_written = 0;
    DUMP_CALL(snprintf, "model ");
    
    DUMP_CALL(dump_name_impl, model->name, node_symbol_table(model));
    DUMP_CALL(snprintf, "(");
    if (model->params) {
      DUMP_CALL(dump_model_params_impl, model->params);
    }
    DUMP_CALL(snprintf, ") {\n");
    DUMP_CALL(dump_decls_impl, model->decls);
    DUMP_CALL(dump_stmts_impl, model->stmts);
    DUMP_CALL(snprintf, "}\n");
    return num_written;
}

struct ModelNode* parse_model(struct ParserState* ps)
{
    struct ModelNode* model;
    symbol_t name;
    struct ModelParamsNode* params;
    struct DeclsNode* decls;
    struct StmtsNode* stmts;

    if (!accept(ps, "model")) return failure("parse_model: model expected");
    name = parse_name(ps);
    if (!name) return failure("parse_model: name expected");
    debug("%s\n", "parse_model: name recognized");
    if (!accept(ps, "(")) return failure("parse_model: ( expected");
    debug("%s\n", "parse_model: ( recognized");
    params = parse_model_params(ps);
    if (params)
        debug("%s\n", "parse_model: params recognized");
    else
        debug("%s\n", "parse_model: params not recognized");
    if (!accept(ps, ")")) return failure("parse_model: ) expected");
    debug("%s\n", "parse_model: ) recognized");
    if (!accept(ps, "{")) return failure("parse_model: { expected");
    debug("%s\n", "parse_model: { recognized");
    decls = parse_decls(ps);
    if (!decls) return failure("parse_model: decls expected");
    debug("%s\n", "parse_model: decls recognized");
    stmts = parse_stmts(ps);
    if (!stmts) return failure("parse_model: stmts expected");
    debug("%s\n", "parse_model: stmts recognized");
    if (!accept(ps, "}")) return failure("parse_model: } expected");
    debug("%s\n", "parse_model: } recognized");

    model = new_node(sizeof(struct ModelNode), ps);
    model->name = name;
    model->params = params;
    model->decls = decls;
    model->stmts = stmts;

    return model;
}


const char* dump_model_params(struct ModelParamsNode* model_params) {
	dump_model_params_impl(dump_buffer, DUMP_BUFFER_SIZE, model_params);
	return dump_buffer;
}

int dump_model_params_impl(char* buffer, int buf_size, struct ModelParamsNode* model_params)
{
    int num_written = 0;
    DUMP_CALL(dump_name_impl, model_params->name, node_symbol_table(model_params));
    if (model_params->model_params) {
        DUMP_CALL(snprintf, ", ");
        DUMP_CALL(dump_model_params_impl, model_params->model_params);
    }
  return num_written;
}

struct ModelParamsNode* parse_model_params(struct ParserState* ps)
{
    symbol_t name;
    struct ModelParamsNode* model_params1;
    struct ModelParamsNode* model_params;

    name = parse_name(ps);
    if (!name) return failure("parse_model_params: name expected");
    if (accept(ps, ",")) {
        model_params1 = parse_model_params(ps);
        if (!model_params1) return failure("parse_model_params: model_params expected");
    } else {
        model_params1 = 0;
    }

    model_params = new_node(sizeof(struct ModelParamsNode), ps);
    model_params->name = name;
    model_params->model_params = model_params1;

    return model_params;
}


const char* dump_decls(struct DeclsNode* decls) {
	dump_decls_impl(dump_buffer, DUMP_BUFFER_SIZE, decls);
	return dump_buffer;
}

int dump_decls_impl(char* buffer, int buf_size, struct DeclsNode* decls)
{
    int num_written = 0;
    DUMP_CALL(dump_decl_impl, decls->decl);
    if (decls->decls)
        DUMP_CALL(dump_decls_impl, decls->decls);
    return num_written;
}

struct DeclsNode* parse_decls(struct ParserState* ps)
{
    struct DeclsNode* decls;
    struct DeclNode* decl;
    struct DeclsNode* decls1;

    decl = parse_decl(ps);
    if (!decl) return failure("parse_decls: decl expected");
    decls1 = parse_decls(ps);

    decls = new_node(sizeof(struct DeclsNode), ps);
    decls->decl = decl;
    decls->decls = decls1;

    return decls;
}


const char* dump_stmts(struct StmtsNode* stmts) {
	dump_stmts_impl(dump_buffer, DUMP_BUFFER_SIZE, stmts);
	return dump_buffer;
}

int dump_stmts_impl(char* buffer, int buf_size, struct StmtsNode* stmts)
{
    int num_written = 0;
    DUMP_CALL(dump_stmt_impl, stmts->stmt);
    if (stmts->stmts)
        DUMP_CALL(dump_stmts_impl, stmts->stmts);
    return num_written;
}

struct StmtsNode* parse_stmts(struct ParserState* ps)
{
    struct StmtsNode* stmts;
    struct StmtNode* stmt;
    struct StmtsNode* stmts1;

    stmt = parse_stmt(ps);
    if (!stmt) return failure("parse_stmts: stmt expected");
    stmts1 = parse_stmts(ps);

    stmts = new_node(sizeof(struct StmtsNode), ps);
    stmts->stmt = stmt;
    stmts->stmts = stmts1;

    return stmts;
}


const char* dump_decl(struct DeclNode* decl) {
	dump_decl_impl(dump_buffer, DUMP_BUFFER_SIZE, decl);
	return dump_buffer;
}

int dump_decl_impl(char* buffer, int buf_size, struct DeclNode* decl)
{
    if (decl->type == PUBLIC_DECL)
        return dump_public_decl_impl(buffer, buf_size, (struct PublicDeclNode*)decl);
    else
        return dump_private_decl_impl(buffer, buf_size, (struct PrivateDeclNode*)decl);
}

struct DeclNode* parse_decl(struct ParserState* ps)
{
    struct PublicDeclNode* public_decl;
    struct PrivateDeclNode* private_decl;

    public_decl = parse_public_decl(ps);
    if (public_decl) {
      return (struct DeclNode*)public_decl;
    }

    private_decl = parse_private_decl(ps);
    if (private_decl) {
      return (struct DeclNode*)private_decl;
    }

    return 0;
}


const char* dump_public_decl(struct PublicDeclNode* public_decl) {
	dump_public_decl_impl(dump_buffer, DUMP_BUFFER_SIZE, public_decl);
	return dump_buffer;
}

int dump_public_decl_impl(char* buffer, int buf_size, struct PublicDeclNode* public_decl)
{
    int num_written = 0;
    DUMP_CALL(snprintf, "public ");
    DUMP_CALL(dump_variable_impl, public_decl->variable);
    DUMP_CALL(snprintf, "\n");
    return num_written;
}

struct PublicDeclNode* parse_public_decl(struct ParserState* ps)
{
    struct VariableNode* variable;
    struct PublicDeclNode* public_decl;

    if (!accept(ps, "public")) return failure("parse_public_decl: public expected");
    variable = parse_variable(ps);
    if (!variable) return failure("parse_public_decl: variable expected");
    debug("%s\n", "parse_public_decl: recognized");

    public_decl = new_node(sizeof(struct PublicDeclNode), ps);
    public_decl->super.type = PUBLIC_DECL;
    public_decl->variable = variable;

    return public_decl;
}


const char* dump_private_decl(struct PrivateDeclNode* private_decl) {
	dump_private_decl_impl(dump_buffer, DUMP_BUFFER_SIZE, private_decl);
	return dump_buffer;
}

int dump_private_decl_impl(char* buffer, int buf_size, struct PrivateDeclNode* private_decl)
{
    int num_written = 0;
    DUMP_CALL(snprintf, "private ");
    DUMP_CALL(dump_variable_impl, private_decl->variable);
    DUMP_CALL(snprintf, "\n");
    return num_written;
}

struct PrivateDeclNode* parse_private_decl(struct ParserState* ps)
{
    struct VariableNode* variable;
    struct PrivateDeclNode* private_decl;

    if (!accept(ps, "private")) return failure("parse_private_decl: private expected");
    variable = parse_variable(ps);
    if (!variable) return failure("parse_private_decl: variable expected");
    debug("%s\n", "parse_private_decl: recognized");

    private_decl = new_node(sizeof(struct PrivateDeclNode), ps);
    private_decl->super.type = PRIVATE_DECL;
    private_decl->variable = variable;

    return private_decl;
}


const char* dump_stmt(struct StmtNode* stmt) {
	dump_stmt_impl(dump_buffer, DUMP_BUFFER_SIZE, stmt);
	return dump_buffer;
}

int dump_stmt_impl(char* buffer, int buf_size, struct StmtNode* stmt)
{
    if (stmt->type == DRAW_STMT)
        return dump_draw_stmt_impl(buffer, buf_size, (struct DrawStmtNode*)stmt);
    else if (stmt->type == LET_STMT)
        return dump_let_stmt_impl(buffer, buf_size, (struct LetStmtNode*)stmt);
    else if (stmt->type == FOR_STMT)
        return dump_for_stmt_impl(buffer, buf_size, (struct ForStmtNode*)stmt);
    return snprintf(buffer, buf_size, "unrecognized stmt type\n");
}


const char* dump_draw_stmt(struct DrawStmtNode* draw_stmt) {
	dump_draw_stmt_impl(dump_buffer, DUMP_BUFFER_SIZE, draw_stmt);
	return dump_buffer;
}

int dump_draw_stmt_impl(char* buffer, int buf_size, struct DrawStmtNode* draw_stmt)
{
    int num_written = 0;
    DUMP_CALL(dump_variable_impl, draw_stmt->variable);
    DUMP_CALL(snprintf, " ~ ");
    //dump_name(draw_stmt->dist, node_symbol_table(draw_stmt));
    DUMP_CALL(snprintf, "%s", erp_name(draw_stmt->dist_type)); 
    DUMP_CALL(snprintf, "(");
    DUMP_CALL(dump_expr_seq_impl, draw_stmt->expr_seq);
    DUMP_CALL(snprintf, ")\n");
    return num_written;
}


const char* dump_let_stmt(struct LetStmtNode* let_stmt) {
	dump_let_stmt_impl(dump_buffer, DUMP_BUFFER_SIZE, let_stmt);
	return dump_buffer;
}

int dump_let_stmt_impl(char* buffer, int buf_size, struct LetStmtNode* let_stmt)
{
    int num_written = 0;
    DUMP_CALL(dump_variable_impl, let_stmt->variable);
    DUMP_CALL(snprintf, " = ");
    DUMP_CALL(dump_expr_impl, let_stmt->expr);
    DUMP_CALL(snprintf, "\n");
    return num_written;
}

struct StmtNode* parse_stmt(struct ParserState* ps)
{
    struct ForStmtNode* for_stmt;
    struct VariableNode* variable;
    symbol_t dist;
    struct ExprSeqNode* expr_seq;
    struct DrawStmtNode* draw_stmt;
    struct ExprNode* expr;
    struct LetStmtNode* let_stmt;

    for_stmt = parse_for_stmt(ps);
    if (for_stmt) {
        debug("%s\n", "parse_stmt: for_stmt recognized");
        return (struct StmtNode*)for_stmt;
    }

    variable = parse_variable(ps);
    if (!variable) return failure("parse_stmt: variable expected");

    if (accept(ps, "~")) {
        dist = parse_name(ps);
        if (!dist) return failure("parse_stmt: dist expected");
        if (!accept(ps, "(")) return failure("parse_stmt: ( expected");
        expr_seq = parse_expr_seq(ps);
        if (!expr_seq) return failure("parse_stmt: expr_seq expected");
        if (!accept(ps, ")")) return failure("parse_stmt: ) expected");
        debug("%s\n", "parse_stmt: draw_stmt recognized");

        erp_enum_t dist_type = erp_type(symbol_to_string(ps->symbol_table, dist)); 

        draw_stmt = new_node(sizeof(struct DrawStmtNode), ps);
        draw_stmt->super.type = DRAW_STMT;
        draw_stmt->variable = variable;
        //draw_stmt->dist = dist;
        draw_stmt->dist_type = dist_type;
        draw_stmt->expr_seq = expr_seq;

        return (struct StmtNode*)draw_stmt;
    }
    
    if (accept(ps, "=")) {
        expr = parse_expr(ps);
        if (!expr) return failure("parse_stmt: expr expected");
        debug("%s\n", "parse_stmt: let_stmt recognized");

        let_stmt = new_node(sizeof(struct LetStmtNode), ps);
        let_stmt->super.type = LET_STMT;
        let_stmt->variable = variable;
        let_stmt->expr = expr;

        return (struct StmtNode*)let_stmt;
    }

    return 0;
}

const char* dump_for_stmt(struct ForStmtNode* for_stmt) {
	dump_for_stmt_impl(dump_buffer, DUMP_BUFFER_SIZE, for_stmt);
	return dump_buffer;
}

int dump_for_stmt_impl(char* buffer, int buf_size, struct ForStmtNode* for_stmt)
{
    int num_written = 0;
    DUMP_CALL(snprintf, "for ");
    DUMP_CALL(dump_name_impl, for_stmt->name, node_symbol_table(for_stmt));
    DUMP_CALL(snprintf, " = ");
    DUMP_CALL(dump_expr_impl, for_stmt->start_expr);
    DUMP_CALL(snprintf, " to ");
    DUMP_CALL(dump_expr_impl, for_stmt->end_expr);
    DUMP_CALL(snprintf, " {\n");
    DUMP_CALL(dump_stmts_impl, for_stmt->stmts);
    DUMP_CALL(snprintf, "}\n");
    return num_written;
}

struct ForStmtNode* parse_for_stmt(struct ParserState* ps)
{
    symbol_t name;
    struct ExprNode* expr;
    struct ExprNode* expr1;
    struct StmtsNode* stmts;
    struct ForStmtNode* for_stmt;

    if (!accept(ps, "for")) return failure("parse_for_stmt: for expected");
    debug("%s\n", "parse_for_stmt: for recognized");
    name = parse_name(ps);
    if (!name) return failure("parse_for_stmt: name expected");
    debug("%s\n", "parse_for_stmt: name recognized");
    if (!accept(ps, "=")) return failure("parse_for_stmt: = expected");
    debug("%s\n", "parse_for_stmt: = recognized");
    debug("parse_for_stmt: %d\n", ps->pointer);
    debug("%c\n", ps->program[ps->pointer]);
    expr = parse_expr(ps);
    if (!expr) return failure("parse_for_stmt: expr expected");
    debug("%s\n", "parse_for_stmt: expr recognized");
    debug("parse_for_stmt: %d\n", ps->pointer);
    debug("%c\n", ps->program[ps->pointer]);
    if (!accept(ps, "to")) return failure("parse_for_stmt: to expected");
    debug("%s\n", "parse_for_stmt: to recognized");
    debug("parse_for_stmt: %d\n", ps->pointer);
    debug("%c\n", ps->program[ps->pointer]);
    expr1 = parse_expr(ps);
    if (!expr1) return failure("parse_for_stmt: expr1 expected");
    debug("%s\n", "parse_for_stmt: expr1 recognized");
    debug("parse_for_stmt: %d\n", ps->pointer);
    debug("%c\n", ps->program[ps->pointer]);
    if (!accept(ps, "{")) return failure("parse_for_stmt: { expected");
    debug("%s\n", "parse_for_stmt: { recognized");
    stmts = parse_stmts(ps);
    if (!stmts) return failure("parse_for_stmt: stmts expected");
    debug("%s\n", "parse_for_stmt: stmts recognized");
    if (!accept(ps, "}")) return failure("parse_for_stmt: } expected");
    debug("%s\n", "parse_for_stmt: } recognized");

    for_stmt = new_node(sizeof(struct ForStmtNode), ps);
    for_stmt->super.type = FOR_STMT;
    for_stmt->name = name;
    for_stmt->start_expr = expr;
    for_stmt->end_expr = expr1;
    for_stmt->stmts = stmts;

    return for_stmt;
}


size_t expr_seq_length(struct ExprSeqNode* expr_seq)
{
    if (expr_seq)
        return 1 + expr_seq_length(expr_seq->expr_seq);
    else
        return 0;
}

const char* dump_expr_seq(struct ExprSeqNode* expr_seq) {
	dump_expr_seq_impl(dump_buffer, DUMP_BUFFER_SIZE, expr_seq);
	return dump_buffer;
}

int dump_expr_seq_impl(char* buffer, int buf_size, struct ExprSeqNode* expr_seq)
{
    int num_written = 0;
    DUMP_CALL(dump_expr_impl, expr_seq->expr);
    if (expr_seq->expr_seq) {
        DUMP_CALL(snprintf, ", ");
        DUMP_CALL(dump_expr_seq_impl, expr_seq->expr_seq);
    }
    return num_written;
}

struct ExprSeqNode* parse_expr_seq(struct ParserState* ps)
{
    struct ExprNode* expr;
    struct ExprSeqNode* expr_seq1;
    struct ExprSeqNode* expr_seq;

    expr = parse_expr(ps);
    if (!expr) return failure("parse_expr_seq: expr expected");

    if (accept(ps, ",")) {
        expr_seq1 = parse_expr_seq(ps);
        if (!expr_seq1) return failure("parse_expr_seq: expr_seq1 expected");

        expr_seq = new_node(sizeof(struct ExprSeqNode), ps);
        expr_seq->expr = expr;
        expr_seq->expr_seq = expr_seq1;

        return expr_seq;
    }

    expr_seq = new_node(sizeof(struct ExprSeqNode), ps);
    expr_seq->expr = expr;
    expr_seq->expr_seq = 0;

    return expr_seq;
}


const char* dump_expr(struct ExprNode* expr) {
	dump_expr_impl(dump_buffer, DUMP_BUFFER_SIZE, expr);
	return dump_buffer;
}

int dump_expr_impl(char* buffer, int buf_size, struct ExprNode* expr)
{
    if (expr->type == IF_EXPR)
        return dump_if_expr_impl(buffer, buf_size, (struct IfExprNode*)expr);
    if (expr->type == NEW_EXPR)
        return dump_new_expr_impl(buffer, buf_size, (struct NewExprNode*)expr);
    if (expr->type == BINARY_EXPR)
        return dump_binary_expr_impl(buffer, buf_size, (struct BinaryExprNode*)expr);
    if (expr->type == PRIMARY_EXPR)
        return dump_primary_impl(buffer, buf_size, (struct PrimaryNode*)expr);
    return snprintf(buffer, buf_size, "unrecognized expr type\n");
}


const char* dump_if_expr(struct IfExprNode* if_expr) {
	dump_if_expr_impl(dump_buffer, DUMP_BUFFER_SIZE, if_expr);
	return dump_buffer;
}

int dump_if_expr_impl(char* buffer, int buf_size, struct IfExprNode* if_expr)
{
    int num_written = 0;
    DUMP_CALL(snprintf, "if ");
    DUMP_CALL(dump_expr_impl, if_expr->condition);
    DUMP_CALL(snprintf, " then ");
    DUMP_CALL(dump_expr_impl, if_expr->consequent);
    DUMP_CALL(snprintf, " else ");
    DUMP_CALL(dump_expr_impl, if_expr->alternative);
    return num_written;
}


const char* dump_new_expr(struct NewExprNode* new_expr) {
	dump_new_expr_impl(dump_buffer, DUMP_BUFFER_SIZE, new_expr);
	return dump_buffer;
}

int dump_new_expr_impl(char* buffer, int buf_size, struct NewExprNode* new_expr)
{
    int num_written = 0;
    DUMP_CALL(snprintf, "new ");
    DUMP_CALL(dump_name_impl, new_expr->name, node_symbol_table(new_expr));
    DUMP_CALL(snprintf, "()");
    return num_written;
}

struct ExprNode* parse_expr(struct ParserState* ps)
{
    struct ExprNode* expr;
    struct ExprNode* expr1;
    struct ExprNode* expr2;
    struct IfExprNode* if_expr;
    symbol_t name;
    struct NewExprNode* new_expr;

    if (accept(ps, "if")) {
        expr = parse_expr(ps);
        if (!expr) return failure("parse_expr: expr expected");
        if (!accept(ps, "then")) return failure("parse_expr: then expected");
        expr1 = parse_expr(ps);
        if (!expr1) return failure("parse_expr: expr1 expected");
        if (!accept(ps, "else")) return failure("parse_expr: else expected");
        expr2 = parse_expr(ps);
        if (!expr2) return failure("parse_expr: expr2 expected");

        if_expr = new_node(sizeof(struct IfExprNode), ps);
        if_expr->super.type = IF_EXPR;
        if_expr->condition = expr;
        if_expr->consequent = expr1;
        if_expr->alternative = expr2;

        return (struct ExprNode*)if_expr;
    }

    if (accept(ps, "new")) {
        name = parse_name(ps);
        if (!name) return failure("parse_expr: name expected");
        if (!accept(ps, "(")) return failure("parse_expr: ( expected");
        if (!accept(ps, ")")) return failure("parse_expr: ) expected");

        new_expr = new_node(sizeof(struct NewExprNode), ps);
        new_expr->super.type = NEW_EXPR;
        new_expr->name = name;

        return (struct ExprNode*)new_expr;
    }

    return parse_add_expr(ps);
}


const char* dump_binary_expr(struct BinaryExprNode* expr) {
	dump_binary_expr_impl(dump_buffer, DUMP_BUFFER_SIZE, expr);
	return dump_buffer;
}

int dump_binary_expr_impl(char* buffer, int buf_size, struct BinaryExprNode* expr)
{
    int num_written = 0;
    DUMP_CALL(dump_expr_impl, expr->left);
    if (expr->op == OP_ADD)
        DUMP_CALL(snprintf, " + ");
    else if (expr->op == OP_SUB)
        DUMP_CALL(snprintf, " - ");
    else if (expr->op == OP_MUL)
        DUMP_CALL(snprintf, " * ");
    else if (expr->op == OP_DIV)
        DUMP_CALL(snprintf, " / ");
    else
        DUMP_CALL(snprintf, " ? ");
    DUMP_CALL(dump_expr_impl, expr->right);
    return num_written;
}

struct ExprNode* parse_add_expr(struct ParserState* ps)
{
    struct ExprNode* term;
    struct ExprNode* add_expr1;
    struct BinaryExprNode* add_expr;

    term = parse_term(ps);
    if (!term) return failure("parse_add_expr: term expected");

    if (accept(ps, "+")) {
        add_expr1 = parse_add_expr(ps);
        if (!add_expr1) return failure("parse_add_expr: add_expr1 expected");

        add_expr = new_node(sizeof(struct BinaryExprNode), ps);
        add_expr->super.type = BINARY_EXPR;
        add_expr->op = OP_ADD;
        add_expr->left = term;
        add_expr->right = add_expr1;

        return (struct ExprNode*)add_expr;
    }

    if (accept(ps, "-")) {
        add_expr1 = parse_add_expr(ps);
        if (!add_expr1) return failure("parse_add_expr: add_expr1 expected");

        add_expr = new_node(sizeof(struct BinaryExprNode), ps);
        add_expr->super.type = BINARY_EXPR;
        add_expr->op = OP_SUB;
        add_expr->left = term;
        add_expr->right = add_expr1;

        return (struct ExprNode*)add_expr;
    }

    return term;
}

struct ExprNode* parse_term(struct ParserState* ps)
{
    struct PrimaryNode* primary;
    struct ExprNode* term1;
    struct BinaryExprNode* term;

    primary = parse_primary(ps);
    if (!primary) return failure("parse_term: primary expected");

    if (accept(ps, "*")) {
        term1 = parse_term(ps);
        if (!term1) return failure("parse_term: term1 expected");

        term = new_node(sizeof(struct BinaryExprNode), ps);
        term->super.type = BINARY_EXPR;
        term->op = OP_MUL;
        term->left = (struct ExprNode*)primary;
        term->right = term1;

        return (struct ExprNode*)term;
    }

    if (accept(ps, "/")) {
        term1 = parse_term(ps);
        if (!term1) return failure("parse_term: term1 expected");

        term = new_node(sizeof(struct BinaryExprNode), ps);
        term->super.type = BINARY_EXPR;
        term->op = OP_DIV;
        term->left = (struct ExprNode*)primary;
        term->right = term1;

        return (struct ExprNode*)term;
    }

    return (struct ExprNode*)primary;
}

const char* dump_unary_expr(struct UnaryExprNode* unary) {
	dump_unary_expr_impl(dump_buffer, DUMP_BUFFER_SIZE, unary);
	return dump_buffer;
}

int dump_unary_expr_impl(char* buffer, int buf_size, struct UnaryExprNode* unary)
{
    int num_written = 0;
    if (unary->op == OP_NEG)
        DUMP_CALL(snprintf, "-");
    DUMP_CALL(dump_primary_impl, unary->primary);
    return num_written;
}

const char* dump_primary(struct PrimaryNode* primary) {
	dump_primary_impl(dump_buffer, DUMP_BUFFER_SIZE, primary);
	return dump_buffer;
}

int dump_primary_impl(char* buffer, int buf_size, struct PrimaryNode* primary)
{
    if (primary->type == NUM_EXPR)
        return dump_numerical_value_impl(buffer, buf_size, ((struct NumExprNode*)primary)->numerical_value);

    if (primary->type == VAR_EXPR)
        return dump_variable_impl(buffer, buf_size, ((struct VarExprNode*)primary)->variable);

    if (primary->type == UNARY_EXPR)
        return dump_unary_expr_impl(buffer, buf_size, (struct UnaryExprNode*)primary);

    if (primary->type == GROUP_EXPR) {
        int num_written = 0;
        DUMP_CALL(snprintf, "(");
        DUMP_CALL(dump_expr_impl, ((struct GroupExprNode*)primary)->expr);
        DUMP_CALL(snprintf, ")");
        return num_written;
    }

    if (primary->type == FUNC_EXPR) {
        int num_written = 0;
        DUMP_CALL(dump_name_impl, ((struct FuncExprNode*)primary)->name, node_symbol_table(primary));
        DUMP_CALL(snprintf, "(");
        DUMP_CALL(dump_expr_seq_impl, ((struct FuncExprNode*)primary)->expr_seq);
        DUMP_CALL(snprintf, ")");
        return num_written;
    }

    return snprintf(buffer, buf_size, "unrecognized primary type\n");
}

struct PrimaryNode* parse_primary(struct ParserState* ps)
{
    struct PrimaryNode* primary;
    struct UnaryExprNode* unary;
    struct ExprNode* expr;
    struct GroupExprNode* group;
    struct NumericalValueNode* numerical_value;
    struct NumExprNode* num_expr;
    symbol_t name;
    struct ExprSeqNode* expr_seq;
    struct FuncExprNode* func_expr;
    struct VariableNode* variable;
    struct VarExprNode* var_expr;

    if (accept(ps, "-")) {
        primary = parse_primary(ps);
        if (!primary) return failure("parse_primary: primary expected");

        unary = new_node(sizeof(struct UnaryExprNode), ps);
        unary->super.super.type = PRIMARY_EXPR;
        unary->super.type = UNARY_EXPR;
        unary->op = OP_NEG;
        unary->primary = primary;

        return (struct PrimaryNode*)unary;
    }

    if (accept(ps, "(")) {
        expr = parse_expr(ps);
        if (!expr) return failure("parse_primary: expr expected");
        if (!accept(ps, ")")) return failure("parse_primary: ) expected");

        group = new_node(sizeof(struct GroupExprNode), ps);
        group->super.super.type = PRIMARY_EXPR;
        group->super.type = GROUP_EXPR;
        group->expr = expr;

        return (struct PrimaryNode*)group;
    }

    numerical_value = parse_numerical_value(ps);
    if (numerical_value) {
        num_expr = new_node(sizeof(struct NumExprNode), ps);
        num_expr->super.super.type = PRIMARY_EXPR;
        num_expr->super.type = NUM_EXPR;
        num_expr->numerical_value = numerical_value;

        return (struct PrimaryNode*)num_expr;
    }

    name = parse_name(ps);
    if (!name) return failure("parse_primary: name expected");

    if (accept(ps, "(")) {
        expr_seq = parse_expr_seq(ps);
        if (!expr_seq) return failure("parse_primary: expr_seq expected");
        if (!accept(ps, ")")) return failure("parse_primary: ) expected");

        func_expr = new_node(sizeof(struct FuncExprNode), ps);
        func_expr->super.super.type = PRIMARY_EXPR;
        func_expr->super.type = FUNC_EXPR;
        func_expr->name = name;
        func_expr->expr_seq = expr_seq;

        return (struct PrimaryNode*)func_expr;
    }

    variable = parse_variable1(ps, name);
    if (variable) {
        var_expr = new_node(sizeof(struct VarExprNode), ps);
        var_expr->super.super.type = PRIMARY_EXPR;
        var_expr->super.type = VAR_EXPR;
        var_expr->variable = variable;

        return (struct PrimaryNode*)var_expr;
    }

    return 0;
}


const char* dump_variable(struct VariableNode* variable) {
	dump_variable_impl(dump_buffer, DUMP_BUFFER_SIZE, variable);
	return dump_buffer;
}

int dump_variable_impl(char* buffer, int buf_size, struct VariableNode* variable)
{
    if (variable->type == NAME_VAR)
        return dump_name_var_impl(buffer, buf_size, (struct NameVarNode*)variable);
    if (variable->type == FIELD_VAR)
        return dump_field_var_impl(buffer, buf_size, (struct FieldVarNode*)variable);
    if (variable->type == INDEX_VAR)
